--- a/latex/atlastodo.sty
+++ b/latex/atlastodo.sty
@@ -6,9 +6,9 @@
 %
 % Note that this file can be overwritten when atlaslatex is updated.
 %
-% Copyright (C) 2002-2020 CERN for the benefit of the ATLAS collaboration
+% Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlastodo}[2020/06/26 v.08-05-00 ATLAS to-do notes]
+\ProvidesPackage{latex/atlastodo}[2021/02/09 v10.3.0 ATLAS to-do notes]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
