--- a/latex/atlasbiblatex.sty
+++ b/latex/atlasbiblatex.sty
@@ -1,15 +1,15 @@
 %-------------------------------------------------------------------------------
 % This file contains adjustments to the numeric-comp (and numeric)
-% biblatex styles that are suggested for ATLAS documents
+% biblatex styles that are suggested for ATLAS documents.
 %
 % See ChangeLog or Git log for history of changes.
 % Responsible: Ian Brock (ian.brock@cern.ch)
 %
 % Note that this file can be overwritten when atlaslatex is updated.
 %
-% Copyright (C) 2002-2020 CERN for the benefit of the ATLAS collaboration
+% Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlasbiblatex}[2020/07/23 v.09-00-03 ATLAS biblatex style]
+\ProvidesPackage{latex/atlasbiblatex}[2021/02/09 v10.3.0 ATLAS biblatex style]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
@@ -40,8 +40,9 @@
 \@ifpackageloaded{biblatex}{%
   % Set block mode
   \typeout{atlasbiblatex: block set to \ABIB@block}
-  \typeout{atlasbiblatex: maxbibnames set to \ABIB@maxbibnames}
+  \ExecuteBibliographyOptions{block=\ABIB@block}
   % Set maxbibnames
+  \typeout{atlasbiblatex: maxbibnames set to \ABIB@maxbibnames}
   \ExecuteBibliographyOptions{maxbibnames=\ABIB@maxbibnames}
   % backref=true adds page numbers of citations to bibliography
   \ifABIB@backref
@@ -118,7 +119,7 @@
     \ifentrytype{article}{\clearfield{number}}{}
   }
 
-  % Do not print out the address
+  % Do not print out the address, except for proceedings
   \ifABIB@address
     \relax
   \else
@@ -126,7 +127,10 @@
       \relax
     \else
       \AtEveryBibitem{%
-        \clearlist{location}
+        \ifentrytype{article}{\clearlist{location}}{}
+        \ifentrytype{booklet}{\clearlist{location}}{}
+        \ifentrytype{report}{\clearlist{location}}{}
+        % \clearlist{location}
       }
     \fi
   \fi
