--- a/latex/atlascomment.sty
+++ b/latex/atlascomment.sty
@@ -1,14 +1,14 @@
 %-------------------------------------------------------------------------------
-% Style file with useful commands for language editors
+% Style file with useful commands for language editors.
 %
 % See ChangeLog or Git log for history of changes.
 % Responsible: Ian Brock (ian.brock@cern.ch)
 %
 % Note that this file can be overwritten when atlaslatex is updated.
 %
-% Copyright (C) 2002-2020 CERN for the benefit of the ATLAS collaboration
+% Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlascomment}[2020/07/23 v.09-00-03 ATLAS language editing style]
+\ProvidesPackage{latex/atlascomment}[2021/02/09 v10.3.0 ATLAS language editing style]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
