--- a/latex/atlascover.sty
+++ b/latex/atlascover.sty
@@ -1,17 +1,16 @@
 %-------------------------------------------------------------------------------
 % Style file for ATLAS cover page for circulation of ATLAS drafts,
-% CERN preprint and auxiliary material front pages
+% CERN preprint and auxiliary material front pages.
 %
 % See ChangeLog or Git log for history of changes.
 % Responsible: Ian Brock (ian.brock@cern.ch)
 %
 % Note that this file can be overwritten when atlaslatex is updated.
 %
-% Copyright (C) 2002-2020 CERN for the benefit of the ATLAS collaboration
+% Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\def\ATPackageVersion{09-00-03}
-
-\ProvidesPackage{latex/atlascover}[2020/07/23 v.09-00-03 ATLAS cover pages]
+\def\ATPackageVersion{10.3.0}
+\ProvidesPackage{latex/atlascover}[2021/02/09 v10.3.0 ATLAS cover pages]
 \NeedsTeXFormat{LaTeX2e}
 
 %\def\@getcl@ss#1.cls#2\relax{\def\@currentclass{#1}}
