--- a/latex/atlasphysics.sty
+++ b/latex/atlasphysics.sty
@@ -1,16 +1,14 @@
 %-------------------------------------------------------------------------------
-% Physics style file for ATLAS documents
-% In your own directory, you may of course change this as you like.
-% If you want to change or add something publicly, contact the responsible.
+% Steer usage of physics style files for ATLAS documents.
 %
 % See ChangeLog or Git log for history of changes.
 % Responsible: Ian Brock (ian.brock@cern.ch)
 %
 % Note that this file can be overwritten when atlaslatex is updated.
 %
-% Copyright (C) 2002-2020 CERN for the benefit of the ATLAS collaboration
+% Copyright (C) 2002-2021 CERN for the benefit of the ATLAS collaboration.
 %-------------------------------------------------------------------------------
-\ProvidesPackage{latex/atlasphysics}[2020/07/23 v.09-00-03 ATLAS physics macros]
+\ProvidesPackage{latex/atlasphysics}[2021/02/09 v10.3.0 ATLAS physics macros]
 \NeedsTeXFormat{LaTeX2e}
 
 %-------------------------------------------------------------------------------
@@ -41,7 +39,7 @@
 \DeclareBoolOption[true]{unit}
 \DeclareBoolOption[true]{xref}
 \DeclareStringOption[2016]{texlive}
-\DeclareBoolOption[false]{texmf}
+\DeclareBoolOption[true]{texmf}
 \ProcessKeyvalOptions*
 
 \typeout{atlasphysics: APHY@texlive is [\APHY@texlive]}
