First phase of rewriting the note

--- a/ANA-EXOT-2019-32-INT1.tex
+++ b/ANA-EXOT-2019-32-INT1.tex
@@ -96,39 +96,49 @@
 %-------------------------------------------------------------------------------
 \section{Introduction}
 \label{sec:intro}
-\input{include/introduction.tex}
+\input{include/01-introduction.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
 %-------------------------------------------------------------------------------
 \section{Benchmark Models and Datasets}
 \label{sec:benchmark_signals}
-\input{include/benchmark_signals.tex}
+\input{include/02-benchmark_signals.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
 \section{Event selection}
 \label{sec:event_selection}
-\input{include/event_selection.tex}
+\input{include/03-event_selection.tex}
 \clearpage
 
 
 %-------------------------------------------------------------------------------
 \section{``Quark-Gluon'' Sample Selection}
 \label{sec:QGselection}
-\input{include/QGselection.tex}
+\input{include/04-QGselection.tex}
 \clearpage
 %-------------------------------------------------------------------------------
 
-\section{Background Estimation Strategy}
-%\label{sec:background_estimation}
-\input{include/04-BackgroundEstimation.tex}
+\section{Sample Optimisation}
+\label{sec:Optimisation}
+\input{include/05-Optimisation.tex}
 \clearpage
 
-\section{Search Strategy}
+
+
+\section{Statistical Framework}
+\label{sec:statistical_framework}
+
+%\section{Background Estimation Strategy}
+%\label{sec:background_estimation}
+%\input{include/04-BackgroundEstimation.tex}
+%\clearpage
+
+%\section{Search Strategy}
 %\label{sec:search_strategy}
-\input{include/06-SearchStrategy.tex}
-\clearpage
+%\input{include/06-SearchStrategy.tex}
+%\clearpage
 %
 % %-------------------------------------------------------------------------------
 % %%SYSTEMATICS
