--- a/include/01-introduction.tex
+++ b/include/01-introduction.tex
@@ -1,3 +1,9 @@
+
+\todo[inline]{Update introduction  to refer to  Full Run 2 analysis.\\
+   			  Push Q/G tagging earlier.\\
+			  Mention updated statistical framework.} 
+
+
 Searches for anomalous dijet events can be sensitive to a large set of models for Beyond the Standard Model (BSM) physics.
 This includes new particles arising from additional broken gauge groups,
 excitations of Standard Model particles (for instance Kaluza-Klein excitations in models involving extra dimensions),
@@ -14,6 +20,7 @@ dramatically improves the reach of searches for potential high-mass signals.
 Increases in the integrated luminosity of the data samples results in much smaller improvements and requires significant 
 improvements in the understanding of systematic uncertainties. 
 
+
 A search for new physics both in the dijet mass distribution and in the angular distributions was performed on 13~\TeV\xspace data collected in 2015 and 2016 \cite{EXOT-2016-21} with the  95\% CL lower limits on the masses given in Table~\ref{tab:Limits201516}. 
 Most of the strategies and methods of the analysis are mostly unchanged with respect to the previous iterations of the analysis, which can be reviewed in great detail in the internal
 notes \cite{Bauce:2226443}.
@@ -23,6 +30,9 @@ notes \cite{Bauce:2226443}.
 %8 to 13~\TeV\xspace dramatically enhances parton luminosities at multi-\TeV\xspace energies
 %(Fig.~\ref{fig:partonluminosity}) and thus the production rates of potential high-mass signals.
 
+
+
+\todo[inline]{Table 1. Check latest limits. Mainly interested in Excited Quark limits here.}
 
 \begin{table}[!h]
 	\centering
@@ -66,6 +76,8 @@ based on the number of charged particles with transverse momentum (\pt ) above 5
 In this note we present the analysis for the whole combined 2015 and 2016 13~\TeV\xspace dataset using quark 
 and gluon tagging  based on charged-particle constituent multiplicity.
 
+
+\todo[inline]{Update Fig 1 with dijet fractions nicer plot...}
 \begin{figure}[htb]
  \centering
 \includegraphics[width=0.75\textwidth]{figures/introduction/truthCompositionRatio.pdf}
