--- a/include/oldMaterial/yStarcut.tex
+++ b/include/oldMaterial/yStarcut.tex
@@ -1,6 +1,8 @@
 \subsection{y* cut Optimization}
 \label{section: y* cut optimization}
 
+\todo[inline]{Logical flow... Q/G selection optimisation, then y* optimisation....\\ Clean up formulae. }
+
 In QCD two-to-two scattering, $t$-channel is dominant. The QCD dijet production is proportional to $(1-cos\theta^{*})^{-2}$, while $H'$ and $String$ production is expected to be flat in $cos\theta^{*}$.
 This means that $y^{*}$($y^{*} = \frac{y_{1}-y_{2}}{2}$) of QCD background will minimize at 0 and that of $H'$ and $String$ will peak at 0.
 
@@ -24,3 +26,5 @@ Figure \ref{fig: string significance as a function of y* cut} shows the signific
         \caption{$String$ significance as a function y* cut in the case of (a) $\geq$1 g-tag, (b) 2 g-tag.}
         \label{fig: string significance as a function of y* cut}
 \end{figure}
+
+
